--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agriguard",
+  "name": "krishimitra",
   "version": "1.0.0",
   "description": "Gemini-Powered Precision Farming & Integrated Pest Management PWA",
   "main": "server.js",
